# ChangeLog for dev-haskell/haddock
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/haddock/ChangeLog,v 1.96 2013/01/01 18:49:17 slyfox Exp $

  01 Jan 2013; Sergei Trofimovich <slyfox@gentoo.org>
  -files/haddock-2.4.2-Setup.hs, -haddock-2.4.2.ebuild:
  Removed old.

*haddock-2.13.1 (18 Nov 2012)

  18 Nov 2012; Mark Wright <gienah@gentoo.org>
  +files/haddock-2.13.1-drop-tools.patch, +haddock-2.13.1.ebuild:
  Bump haddock to 2.13.1 with no keywords, as depends on ghc 7.6.1 which is not
  yet in portage

*haddock-2.10.0-r2 (21 Oct 2012)

  21 Oct 2012; Sergei Trofimovich <slyfox@gentoo.org>
  +files/haddock-2.10.0-ticket-202.patch, +haddock-2.10.0-r2.ebuild,
  -haddock-2.10.0-r1.ebuild, haddock-2.10.0.ebuild:
  Fix build error against nonbundled cabal (bug #435726 by Alex and Kyle Blake).

  14 Sep 2012; Alexander Vershilov <qnikst@gentoo.org> haddock-2.10.0-r1.ebuild,
  haddock-2.10.0.ebuild, haddock-2.4.2.ebuild, haddock-2.6.1.ebuild,
  haddock-2.9.2.ebuild:
  adding mirror://hackage

  20 Aug 2012; Christoph Junghans <ottxor@gentoo.org> haddock-2.10.0-r1.ebuild:
  added prefix keywords

*haddock-2.10.0-r1 (02 Jun 2012)

  02 Jun 2012; Mark Wright <gienah@gentoo.org>
  +files/haddock-2.10.0-dont-crash-on-unicode-strings-in-doc-comments.patch,
  +haddock-2.10.0-r1.ebuild:
  Apply patch from upstream: Don't crash on unicode strings in doc comments.

  25 Mar 2012; Sergei Trofimovich <slyfox@gentoo.org>
  +files/haddock-2.10.0-drop-tools.patch, haddock-2.10.0.ebuild:
  Get rid of dev-haskell/happy and dev-haskell/alex depends (reported by judu).

  18 Mar 2012; Sergei Trofimovich <slyfox@gentoo.org>
  +files/haddock-2.9.2-cabal-1.10.patch, haddock-2.9.2.ebuild:
  dev-haskell/haddock: restrict haddock down to cabal-1.10 (fails with 1.14)

  09 Mar 2012; Sergei Trofimovich <slyfox@gentoo.org>
  +files/haddock-2.6.1-cabal-1.8.patch, haddock-2.6.1.ebuild: