@@ -11,18 +11,15 @@ AUX haddock-2.9.2-cabal-1.10.patch 305 SHA256 31eaf2bbaf838ca8e8b98bc52c26282bb6
 DIST haddock-2.10.0.tar.gz 159750 SHA256 d107dba15e8aee5abcb540b818b5dcb8ced98bae7d0714f50192dba26cadb410 SHA512 0680ffafce7a2e6a24ae85869694ea5c590305007da07cdffd6adb8a837164452cdf2de159c9fdcba059f76fc01f30771237dbcd71dd44d04afc0d2317e28563 WHIRLPOOL b584452acbe6e1c3474c97a62b17621e1ce0ef31574845499ca8b6ebdcf54559fed2b37d1890b80b1d526cc9b45d52b51a9acf6ae0d9472e15f93c1a7ff7ef3f
 DIST haddock-2.13.1.tar.gz 176831 SHA256 6e5e2295cd191e43a046c12544f2f4e8b4260cfda8282d48b15a7a35d8a24e7f SHA512 2cff54f4a3676c605327a6ad926df51976e7ec2bd512e464d0bf84d24f29fa3078dd5f8006329a4a6913607717c2c45f1db2b63d9e9f655d64cbbe92e0fe35fc WHIRLPOOL d1d9202767f4d5ee68ed100f3b95c9be6bff5024b3155b3dbaf3d1d690ac9dc0be2841ef1ea960c095a30005dc2bbb16046dbc4827c6047ee50ad6b1671ae38f
 DIST haddock-2.6.1.tar.gz 128158 SHA256 626bfbc51f33ada003fbbfe1b40f3147039369e9898f8e8d2f5c1c863436ea6a SHA512 afa2c1166448f313b3031718caa25e4507b3b773dfd3af3b029ce58c3d8e0fde44f823206dac1219f61ac84589ac580cade688470abd7f53fac677caab0abff0 WHIRLPOOL e719061a8f66fec8273e59d4a99f105710d3ff2f150dae4086bac4b8fc9f365a597876669ebffbb975b9b00639bbe4645f743961de26f0b102cf4485fb00c555
-DIST haddock-2.9.2.tar.gz 154040 SHA256 e8498520a4b8c8a03330141ba4c31d81e90dfd361de3ff7e320cdf71c2dd3ba1 SHA512 a3f223a11ec8d538d0d35fcb717445c2f532e47e687bb72150040592fe9f99f90d8224fca786891f3a9191cff9b8ce2ad42388cfd46a07abad5734b126891a51 WHIRLPOOL 181707ffd3dae0d329bae77e1a0c3a3f602925e0fe1d3cfaaaf69ac9e3e828dae0f0264291b497f4fc66aff37ec1ddeeee9f0f63170aad0799b064d157f27d3a
 EBUILD haddock-2.10.0-r2.ebuild 2600 SHA256 53ab7de407395e9eb334ed974f55b2c52d0ec1a5ad0de27bfef4031b875948df SHA512 3ce19fd2930f9bb121842366ac777a878a033f00d48f7e2b868b50aa5c353a4e958ad26547b9d79885dd3f1804851aa1e2058bcc790e9cdb049ecdefb17c2333 WHIRLPOOL 539d8b269000b27957c82ad0b5a1790c760e9d668afe92e1d9532cb40c14bfdd8ff900eb9a06267de4d18914c2ad74cbc0bf2891df6601578296ec823d720408
-EBUILD haddock-2.10.0.ebuild 2216 SHA256 ca38c202163d2521081108005b787fdb1f708b9c3e97fc60960feb0ea567f85d SHA512 2968c34604302f73769a9b44e7de14fba80519c5445ccfb0a00e626443192d0ab36a81e763a61024e1617d578e802a6cbfbd59c0d8a044c8a1711db679f4acde WHIRLPOOL f2b9b0f170e309fc8f8192420a268f34fdfaf7e8037fe8a3e358355ae37107a46ce16bffd360f819d94a522d34d6b67b3f6273a31e36a6c9f6003db3041b424a
 EBUILD haddock-2.13.1.ebuild 2060 SHA256 f361aed253c5ac3266d9883866b36a774d3b73032371d506065a8fe39bcdaf8b SHA512 2f5ac474800899f8434cb78bfc37020d0790aafdd12d3901754e703b60f74eaf627ad4ffe51181653336c6a79fd9706b573c61fb750bfdb90be054abe7739a9f WHIRLPOOL 5afb367571d847ee814bd82f9aeb853f01cefa566081a801ce1350326d6cd0769fbfa762e92f7cc981e41cf749e4f82c2a67aa9cca7eb5856dd32f082e5e60bf
 EBUILD haddock-2.6.1.ebuild 2545 SHA256 387f3e7feeb036716e5432d793061f3c4a9a792818dfcec8c14ba31511456922 SHA512 304b2c50bf77bec262a0cbd69b4d1787871b84562bf34cc1a155ec708558d2d13e1a962f0a6cd50f1db85bba9ce18cab98e239722c0377df8b5041642999d3d9 WHIRLPOOL e7006d55b5f5b75d65d4c0efc881aa1ed4fc7ec7a9d3224ddc53c498f283ba0e085cd60c3fcddd62995034e4ed4ec8bbe539c014fd18eb25229390f05e252066
-EBUILD haddock-2.9.2.ebuild 2721 SHA256 68ccaeecf31796600cb37d76a71512aa0ff32dced59e793a87c48be3e11faa5b SHA512 3d927dee90571785e754a3f98fc7c01b3d7a284805fc219d8076beffee2889c231ad2cda0374b4bc7cde5727ab21a2a34528e340b7ff71555fa3be5e1d1c0b26 WHIRLPOOL 37797efccc6caea7a9eebf31ec564ec21fc739a3e8083dd035ab2220798b5e16b16b866480c370ebd4645aed330f9a74531bfffe918cb2884796ac81e2fcf1ac
-MISC ChangeLog 14155 SHA256 242ea29a4ce91e8f0cb66445fcd5fc2d8f9b0d5c935e5ceebac248f4ccc42080 SHA512 331593265846e887e0792abec736a26621a4790a69454d943577fe69049499f289b88f3ceea94a8e92bbd2e54d54706e5893437832aa1d24a75eb1d5743cf30c WHIRLPOOL e65c86f89d6b07c0518721b605e0102dbb936245d971d995f80f32d01762b7117b09a9fdcc5a06df64ba3d77f0eca9617557958c95c670184a4a51b13f3efa86
+MISC ChangeLog 14274 SHA256 73b3538a5fa5f4ac5f6346646b4b40fec673f3dc882d79054cfe5d70477b6346 SHA512 e01f55019be37595bd6003344ad394a9649c86e4eebdf2423f016eba5a2bce30e7da4ac516041b6f9f07c054fe5a0130642e722bdb7bb5ebccbc4a7a4828dcf0 WHIRLPOOL 75f1cce34b1d2d633533624787cc9a299c16f8e27d98eb298064ef9721a265a84fe86ffd89fe4957aa7dc8228045ae848fc9afee843316789cdb63ee7052231d
 MISC metadata.xml 223 SHA256 1d00c8be162a6cb87b3de440b3e63e10b39c12d56e8fbfe592e75aed872b2508 SHA512 24765bbf1cb187cd262aa7fb3824c1cec65e2bf3f2198099de688916d96401a26458265b15408f22b1fbd6d6a2842df814a57ceda80dfa00d130b24423b7544f WHIRLPOOL 8fd6700f6198db6540eb51edf11372faeb6eb8a542a692e515badf236f62444f2c180f7d08e0f98e9fdfa23de14631b31af50543469aaa27084d6b637e2644c7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDjL5oACgkQcaHudmEf86rIDgCfT6KKUVK79adaxdxNFWAkE08b
-uiYAnimyRnMBb0I3p0BSMmG1lb5p7N0H
-=goe9
+iEYEAREIAAYFAlDjMHQACgkQcaHudmEf86ox0gCeK1qSsGNltbHk+ZWukH1iyaZm
+h+sAn30tZZOXDOdAU/iXrEMl/LB2H9cF
+=DK8E
 -----END PGP SIGNATURE-----
