@@ -1,6 +1,10 @@
 # ChangeLog for dev-haskell/haddock
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/haddock/ChangeLog,v 1.96 2013/01/01 18:49:17 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/haddock/ChangeLog,v 1.97 2013/01/01 18:52:56 slyfox Exp $
+
+  01 Jan 2013; Sergei Trofimovich <slyfox@gentoo.org> -haddock-2.10.0.ebuild,
+  -haddock-2.9.2.ebuild:
+  Removed old.
 
   01 Jan 2013; Sergei Trofimovich <slyfox@gentoo.org>
   -files/haddock-2.4.2-Setup.hs, -haddock-2.4.2.ebuild:
